--- a/.github/workflows/kind.yml
+++ b/.github/workflows/kind.yml
@@ -49,22 +49,49 @@ jobs:
         git diff --exit-code
         make lint
 
+    - name: Unit and Integration Tests
+      run: |
+        make test
+
     - name: Create KinD Cluster (${{ matrix.kind }}) and deploy components
       env:
         KIND_VERSION: ${{ matrix.kind }}
       run: |
         ./build/manage-clusters.sh
-
-    - name: Unit and Integration Tests
-      run: |
-        make test
+        make wait-for-work-agent
 
     - name: E2E Tests
       run: |
         export GOPATH=$(go env GOPATH)
-        make wait-for-work-agent
-        make e2e-test
-    
+        make e2e-test-coverage
+
+    - name: Test Coverage Verification
+      if: ${{ github.event_name == 'pull_request' }}
+      run: |
+        make test-coverage
+        make coverage-verify
+
+    - name: Test Coverage and Report Generation
+      if: ${{ github.event_name == 'push' }}
+      run: |
+        make test-coverage | tee report_unit.json
+        make gosec-scan
+        cat gosec.json
+
+    - name: SonarCloud Analysis
+      if: |
+        github.event_name == 'push' && 
+        github.repository_owner == 'stolostron'  &&
+        matrix.kind == 'latest'
+      uses: sonarsource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      with:
+        projectBaseDir: config-policy-controller
+        args: >
+          --debug
+
     - name: Debug
       if: ${{ failure() }}
       run: |
