--- a/.github/workflows/kind.yml
+++ b/.github/workflows/kind.yml
@@ -3,7 +3,7 @@ name: KinD tests
 on:
   push:
     branches:
-      - main
+      - check-deployment
   pull_request:
     branches:
       - main
@@ -21,10 +21,10 @@ jobs:
         # The "minimum" tag is set in the Makefile
         # KinD tags: https://hub.docker.com/r/kindest/node/tags
         kind:
-          - 'minimum'
+          # - 'minimum'
           - 'latest'
         hosted_mode:
-          - "true"
+          # - "true"
           - "false"
     name: KinD tests
     steps:
@@ -48,19 +48,36 @@ jobs:
         make kind-controller-kubeconfig
         make kind-ensure-sa
 
-    - if: matrix.hosted_mode == 'false'
-      name: E2E tests
-      run: |
-        export GOPATH=$(go env GOPATH)
-        make wait-for-work-agent
-        make e2e-test-coverage
+    # - if: matrix.hosted_mode == 'false'
+    #   name: E2E tests
+    #   run: |
+    #     export GOPATH=$(go env GOPATH)
+    #     make wait-for-work-agent
+    #     make e2e-test-coverage
 
-    - if: matrix.hosted_mode == 'true'
-      name: E2E tests hosted mode
+    - if: matrix.hosted_mode == 'false'
+      name: Verify Deployment Configuration
       run: |
-        export GOPATH=$(go env GOPATH)
-        make wait-for-work-agent
-        make e2e-test-hosted-mode
+        echo "::group::Build image"
+        make build-images
+        echo "::endgroup::"
+
+        kubectl config get-contexts
+        echo "::group::Deploy controller"
+        make kind-deploy-controller
+        echo "::endgroup::"
+
+        for i in {1..30}; do
+          KUBECONFIG=${PWD}/kubeconfig_cluster1_e2e kubectl get pods -A
+          sleep 10
+        done
+
+    # - if: matrix.hosted_mode == 'true'
+    #   name: E2E tests hosted mode
+    #   run: |
+    #     export GOPATH=$(go env GOPATH)
+    #     make wait-for-work-agent
+    #     make e2e-test-hosted-mode
 
     - name: Test Coverage Verification
       if: |
